Added logo to header

--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,12 @@
     <meta property="og:site_name" content="Wave">
 		<meta property="og:url" content="http://robertvarela.com/wave">
 		<meta property="og:title" content="Wave">
-		<meta property="og:image" content="assets/wave-logo-icon.png">
+		<meta property="og:image" content="images/wave-logo-icon.png">
 		<meta property="og:image:width" content="1200">
 		<meta property="og:image:height" content="630">
 		<meta property="og:type" content="website">
     <title>Wave</title>
-    <link rel="shortcut icon" type="image/x-icon" href="assets/wave-logo-icon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="images/wave-logo-icon.png">
   </head>
   <body>
     <div id="root"></div>
